# mb_server_ruteng_demo_v1

./: .gitignore  CMakeLists.txt  README.md  rpmain.sln
CommonLib/CommonFunc/: CMakeLists.txt
CommonLib/CommonFunc/include/: CFBaseObj.hpp  CFDummyFunc.hpp  CFHeaderAll.hpp  CFRefCntBase.hpp  CFSimpleCache.hpp  CFUtil.hpp
CommonLib/CommonFunc/src/: CFBaseObj.cpp  CFRefCntBase.cpp  CommFunc.vcxproj  CommFunc.vcxproj.filters  InnerCommon.hpp  ReadMe.txt
CommonLib/CommonFunc/src/CommFunc/: CommFunc.vcxproj
CommonLib/DataProvider/: CMakeLists.txt  DataProvider.vcxproj  DataProvider.vcxproj.filters
CommonLib/DataProvider/include/: DPCommon.hpp  DPDataRouting.hpp  DPDataShared.hpp  DPFacade.hpp  DPHeaderAll.hpp  DPNDSTypeDef.h  DPProv.hpp  DPProvRoot.hpp
CommonLib/DataProvider/src/: DPCommon.cpp  DPDBConnectionPool.cpp  DPDBConnectionPool.hpp  DPFacade.cpp  DPProv.cpp  DPProvFolderProduct.cpp  DPProvFolderProduct.hpp  DPProvFolderRoot.cpp  DPProvFolderRoot.hpp  DPProvFolderUpdateRegion.cpp  DPProvFolderUpdateRegion.hpp  DPProvProduct.cpp  DPProvProduct.hpp  DPProvRoot.cpp  DPProvRouting.cpp  DPProvRouting.hpp  DPProvShared.cpp  DPProvShared.hpp  InnerCommon.hpp
DataProvider/: DPCommon.cpp  DPCommon.hpp  DPDBConnectionPool.cpp  DPDBConnectionPool.hpp  DPDataProduct.hpp  DPFacade.cpp  DPFacade.hpp  DPProvFolderProduct.cpp  DPProvFolderProduct.hpp  DPProvFolderRoot.cpp  DPProvFolderRoot.h  DPProvFolderRoot.hpp  DPProvProduct.cpp  DPProvProduct.hpp  DataProvider.vcxproj  DataProvider.vcxproj.filters  InnerCommon.hpp  ReadMe.txt  SL_DAL_Adapter.hpp
DataProvider/include/: DPCommon.hpp  DPData.hpp  DPFacade.hpp
DataProvider/src/: InnerCommon.hpp
ExternalLibrary/nds_sqlite3/include/: nds_sqlite3.h
ExternalLibrary/nds_sqlite3/src/: nds_compress.c  nds_extensions.c  nds_extensions.h  nds_sqlite3.pro  nds_sqlite3.sln  nds_sqlite3.vcxproj  nds_sqlite3.vcxproj.filters
ExternalLibrary/zlib-1.2.8/contrib/vstudio/vc11/: zlibstat.vcxproj
Function/: RouteSession.hpp
Function/RP/: CMakeLists.txt  rp.vcxproj  rp.vcxproj.filters
Function/RP/include/: RPCommon.hpp  RPRSLink.hpp  RPSection.hpp  RPWayPoints.hpp
Function/RP/src/: InnerCommon.hpp  RPRCConnectSearch.cpp  RPRCConnectSearch.hpp  RPRCRouteEdit.cpp  RPRCRouteEdit.hpp  RPRCSectionDirector.cpp  RPRCSectionDirector.hpp  RPRCTermSearch.cpp  RPRCTermSearch.hpp  RPRCUpSearch.cpp  RPRCUpSearch.h  RPRCUpSearch.hpp  RPRouteCalcRequest.cpp  RPRouteCalcRequest.hpp  RPRouteDataLoader.hpp  RPWayPoints.cpp  RouteSession.cpp
Function/RP/src/Route/: RPRSLink.cpp  RPRouteDataLoader.cpp  RPSection.cpp
Function/RP/src/RouteCalculator/: RPRCCost.cpp  RPRCCost.hpp  RPRCLinkLevelUp.cpp  RPRCLinkLevelUp.hpp  RPRCRouteCalcCommon.cpp  RPRCRouteCalcCommon.hpp  RPRCRouteSearchCommFunc.cpp  RPRCRouteSearchCommFunc.hpp
NaviApi/include/: NaviApiDll.hpp  navapi_route.hpp  navapi_session.hpp
NaviApi/src/: NaviApi.cpp  NaviApi.vcxproj  navapi.cpp  navapi.vcxproj.filters
Platform/: Platform.pro
Platform/ErrLog/: CMakeLists.txt
Platform/ErrLog/include/: ELErrLog.h
Platform/ErrLog/src/: ErrLog.pro  ErrLog.sln  ErrLog.vcxproj  ReadMe.txt
Platform/OSWrapper/: CMakeLists.txt
Platform/OSWrapper/include/: OSWrapper.h
Platform/OSWrapper/src/: InnerCommon.h  OSWrapper.cpp  OSWrapper.pro  OSWrapper.sln  OSWrapper.vcxproj  OSWrapper.vcxproj.filters  ReadMe.txt
Platform/Platform/ErrLog/src/: ELErrLog.cpp  ErrLog.vcxproj  ErrLog.vcxproj.filters  InnerCommon.cpp  InnerCommon.h
navapi/: ReadMe.txt  navapi.vcxproj  stdafx.cpp
rp/: InnerCommon.hpp  RPCommon.hpp  RPRCConnectSearch.cpp  RPRCConnectSearch.h  RPRCConnectSearch.hpp  RPRCRouteEdit.cpp  RPRCRouteEdit.hpp  RPRCSectionDirector.cpp  RPRCSectionDirector.hpp  RPRCTermSearch.cpp  RPRCTermSearch.hpp  RPRCUpSearch.cpp  RPRCUpSearch.h  RPRouteCalcRequest.cpp  RPRouteCalcRequest.hpp  ReadMe.txt  RouteSession.cpp  rp.vcxproj  rp.vcxproj.filters
rpmain/: ReadMe.txt  rpmain.cpp  rpmain.vcxproj  rpmain.vcxproj.filters  stdafx.cpp
